--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=timetrack
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
 
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
