--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.3.2</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.time.dev</groupId>
     <artifactId>timetrack</artifactId>
@@ -101,5 +101,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
